# llm-vs-ai

./: CLAUDE.md  GAMEPLAY.md  LEARNINGS.md  README.md
bot-agent-sdk/: .env.example  agent.py  requirements.txt  run.sh  test_mcp_tools.py
mcp-server/: .gitignore  pyproject.toml  vsai_server.py
mod/: mod.sln
mod/CakeBuild/: Program.cs
mod/mod/: AiBotMapLayer.cs  AiTaskRemoteControl.cs  EntityAiBot.cs  EntityAiBotRenderer.cs  EntityBehaviorBotInventory.cs  VsaiModSystem.cs  mod.csproj  modinfo.json
mod/mod/assets/vsai/entities/: aibot.json
mod/mod/assets/vsai/lang/: en.json
mod/mod/assets/vsai/patches/: drifter-aggro.json
mod/mod/assets/vsai/shapes/entity/humanoid/: trader.json
python-vs-core/: .gitignore  CLAUDE.md  README.md  build-publish.sh  pyproject.toml  test_visibility_fix.py
python-vs-core/src/vintage_story_core/: __init__.py  pathfinding.py  types.py  visibility.py
python-vs-core/tests/: test_pathfinding.py
tools/: bot_move.py
